# Front_Runner

./: sample_ice_data.csv
backend/: PHGY.xlsx  examine_excel.py  pyproject.toml
backend/app/: main.py
frontend/src/: App.tsx
