[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
pandas = "^2.3.1"
openpyxl = "^3.1.5"
xlrd = "^2.0.2"
yfinance = "^0.2.65"
requests = "^2.32.4"
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"
scipy = "^1.16.1"
scikit-learn = "^1.7.1"
plotly = "^6.2.0"
dash = "^3.1.1"
streamlit = "^1.47.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
